# Project-02

./: .env  .vercelignore  MIT.license  app.py  code_executor.py  data_analyzer.py  fallback_analyzer.py  llm_service.py  pyproject.toml  replit.md  requirements.txt  web_scraper.py
api/: index.py
attached_assets/: Pasted-Project-Data-Analyst-Agent-Deploy-a-data-analyst-agent-This-is-an-API-that-uses-LLMs-to-source-p-1754928678445_1754928678448.txt  Pasted-description-TDS-Data-Analyst-Agent-generic-eval-20-point-rubric-providers-id-https--1754930507289_1754930507296.txt
static/: style.css
templates/: index.html  test.html
